--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -6,3 +6,9 @@ sky:
     database: sky_take_out
     username: root
     password: root
+
+  alioss:
+    endpoint: oss-cn-hangzhou.aliyuncs.com
+    access-key-id: LTAI5tLmKyefze8CGYs47HQt
+    access-key-secret: MvO3k0AIAm4GSNujs0fLug4Chyu4sB
+    bucket-name: cq-takeout-test
