--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -44,8 +44,19 @@ sky:
     # 设置前端传递过来的令牌名称
     admin-token-name: token
 
+    # 设置jwt签名加密时使用的秘钥
+    user-secret-key: itccast
+    # 设置jwt过期时间
+    user-ttl: 7200000
+    # 设置前端传递过来的令牌名称 (这个是给定了的，所以只写这个)
+    user-token-name: authentication
+
   alioss:
     endpoint: ${sky.alioss.endpoint}
     access-key-id: ${sky.alioss.access-key-id}
     access-key-secret: ${sky.alioss.access-key-secret}
     bucket-name: ${sky.alioss.bucket-name}
+
+  wechat:
+    appid: ${sky.wechat.appid}
+    secret: ${sky.wechat.secret}
